# zed_orb_slam

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  setup.sh  zed_config.yaml
Zed/: CMakeLists.txt
src/: main.cpp
